[gd_scene load_steps=9 format=3 uid="uid://ccihauj3fdxyb"]

[ext_resource type="Script" path="res://start_screen.gd" id="1_y5jdy"]
[ext_resource type="Texture2D" uid="uid://dkb4858kk0gkb" path="res://art/start_screen_textures/bricks.jpg" id="2_38gp4"]
[ext_resource type="FontFile" uid="uid://cpetgmsbor1q6" path="res://fonts/Xolonium-Regular.ttf" id="2_h37dc"]
[ext_resource type="Texture2D" uid="uid://bdm35f3cynopa" path="res://art/start_screen_textures/logo_blank.png" id="3_c0y3t"]
[ext_resource type="FontFile" uid="uid://b4captgie31fl" path="res://fonts/LOKICOLA.TTF" id="5_thugi"]
[ext_resource type="AudioStream" uid="uid://cw4wcp0dl73on" path="res://sound/music/pizza rat title music.mp3" id="6_584io"]

[sub_resource type="InputEventAction" id="InputEventAction_g0xx0"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_5fod0"]
events = [SubResource("InputEventAction_g0xx0")]

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_y5jdy")

[node name="MainBackground" type="TextureRect" parent="."]
offset_right = 2304.0
offset_bottom = 1504.0
texture = ExtResource("2_38gp4")
expand_mode = 1

[node name="Logo" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_c0y3t")

[node name="Message" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -159.5
offset_top = 157.0
offset_right = 159.5
offset_bottom = 235.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_h37dc")
theme_override_font_sizes/font_size = 64
text = "Pizza Rat"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = 404.0
offset_right = 506.0
offset_bottom = 504.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_thugi")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_5fod0")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MainMenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_584io")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
